--- a/js/templates/vizDetail.html
+++ b/js/templates/vizDetail.html
@@ -13,5 +13,5 @@
 <h3 class="<%= lang %>">Methodology</h3>
 <p><%= methodology %></p>
 </div>
-<div  id="overlay"></div>
+<!--<div  id="overlay"></div>-->
 </div>
