adding individual parties maps

--- a/css/maps.css
+++ b/css/maps.css
@@ -542,7 +542,7 @@
   padding:1px;
   font-size:13px;
   line-height:18px;
-  color:#aaa;
+  color:#000;
   border:none;
   text-align: right
   -webkit-box-shadow:none;
