added charts section

--- a/js/templates/header.html
+++ b/js/templates/header.html
@@ -12,6 +12,7 @@
           <ul>
             <li><a href="#2011"  id="menu-2011">2011 Elections</a></li>
             <li><a href="#2013"  id="menu-2013">Upcoming elections</a></li>
+            <li><a href="charts/index.html"  id="menu-2013">Charts</a></li>
             <li><a href="#about"  id="menu-play">About</a> </li>
            
           </ul>
