--- a/js/templates/header.html
+++ b/js/templates/header.html
@@ -12,7 +12,7 @@
           <ul>
             <li><a href="#2011"  id="menu-2011">2011 Elections</a></li>
             <li><a href="#2013"  id="menu-2013">Upcoming elections</a></li>
-            <li><a href="salut/index.html"  id="menu-2013">Charts</a></li>
+            <li><a href="charts/index.html"  id="menu-2013">Charts</a></li>
             <li><a href="#about"  id="menu-play">About</a> </li>
            
           </ul>
@@ -22,6 +22,7 @@
           <ul>
             <li><a href="#2011"  id="menu-2011">Elections 2011</a></li>
             <li><a href="#2013"  id="menu-2013">Prochaines élections</a></li>
+            <li><a href="charts/index.html"  id="menu-2013">Graphiques</a></li>
             <li><a href="#about"  id="menu-play">A propos</a> </li>
           </ul>
         </div>
@@ -29,6 +30,7 @@
           <ul>
             <li><a href="#2011"  id="menu-2011">2011 انتخابات </a></li>
             <li><a href="#2013"  id="menu-2013">الإنتخابات القادمة </a></li>
+            <li><a href="charts/index.html"  id="menu-2013">الرسوم البيانية</a></li>
            <li><a href="#about"  id="menu-play">حول </a> </li>
           </ul>
         </div>
