--- a/css/style.css
+++ b/css/style.css
@@ -638,6 +638,21 @@ transition: all .3s;
         text-align: center;
 }
 
+#notes {
+	color: white;
+	font-size: 15px;
+	font-weight: bolder;
+	margin-right: 100px;
+	position: fixed;
+	top: 100px;
+	z-index: 99999999999999;
+	right: 30px;
+	background-color:#CD2122;
+	padding: 10px 5px 10px 5px;
+    width: 70px;
+    text-align: center;
+}
+
 /* nav side menu */ 
 
 /* General styles for all menus */
