bug fixing, back and download buttons

--- a/js/templates/vizDetail.html
+++ b/js/templates/vizDetail.html
@@ -5,9 +5,9 @@
 <a href="data/GLOBAL_DATA.xlsx" id="download" class="pull-right lang-fr">Télécharger les données</a>
 <a href="#2011"                 id="download" class="pull-right lang-ar">تحميل البيانات</a>
 <a href="data/GLOBAL_DATA.xlsx" id="download" class="pull-right lang-en">Download the DATA</a>
-<a href="#2011" id="back" class="pull-right lang-fr">&lt; RETOUR</a>
-<a href="#2011" id="back" class="pull-right lang-ar">رجوع &gt;</a>
-<a href="#2011" id="back" class="pull-right lang-en">&lt; BACK</a>
+<a onclick="history.back(-1)" id="back" class="pull-right lang-fr">&lt; RETOUR</a>
+<a onclick="history.back(-1)" id="back" class="pull-right lang-ar">رجوع &gt;</a>
+<a onclick="history.back(-1)" id="back" class="pull-right lang-en">&lt; BACK</a>
 <div id="map"></div>
 <div id="description-dash" class="dash-right dash-right-vertical dash-right-right">
 <h3><%= title %></h3>
